ucxclient-wrapper/ucxclient_wrapper_generated.h

/* Forward declaration */
typedef struct ucx_instance ucx_instance_t;
int32_t ucx_bluetooth_GetPairingMode(ucx_instance_t *inst, uBtPairingMode_t * pPairingMode);
int32_t ucx_bluetooth_UserConfirmation(ucx_instance_t *inst, uBtLeAddress_t * bd_addr, uBtConfirm_t confirm);
int32_t ucx_bluetooth_UserPasskeyEntry2(ucx_instance_t *inst, uBtLeAddress_t * bd_addr, uBtConfirm_t confirm);
int32_t ucx_bluetooth_UserPasskeyEntry3(ucx_instance_t *inst, uBtLeAddress_t * bd_addr, uBtConfirm_t confirm, int32_t passkey);
int32_t ucx_bluetooth_Bond(ucx_instance_t *inst, uBtLeAddress_t * bd_addr);
int32_t ucx_bluetooth_Unbond(ucx_instance_t *inst, uBtLeAddress_t * bd_addr);
int32_t ucx_bluetooth_UnbondAll(ucx_instance_t *inst);
void ucx_bluetooth_ListBondedDevicesBegin(ucx_instance_t *inst);
bool ucx_bluetooth_ListBondedDevicesGetNext(ucx_instance_t *inst, uBtLeAddress_t * pBdAddr);
int32_t ucx_bluetooth_SetDeviceInfoServiceChar(ucx_instance_t *inst, uBtCharId_t char_id, const char * char_value);
bool ucx_bluetooth_GetDeviceInfoServiceCharBegin(ucx_instance_t *inst, uBtCharId_t char_id, const char * * ppCharValue);
void ucx_bluetooth_ListDeviceInfoServiceCharsBegin(ucx_instance_t *inst);
bool ucx_bluetooth_ListDeviceInfoServiceCharsGetNext(ucx_instance_t *inst, uCxBtListDeviceInfoServiceChars_t * pBtListDeviceInfoServiceCharsRsp);
int32_t ucx_bluetooth_RequestPhy(ucx_instance_t *inst, int32_t conn_handle, int32_t tx_phy, int32_t rx_phy);
int32_t ucx_bluetooth_GetPhy(ucx_instance_t *inst, int32_t conn_handle, uCxBtGetPhy_t * pBtGetPhyRsp);
void ucx_bluetooth_RegisterConnect(ucx_instance_t *inst, uUEBTC_t callback);
void ucx_bluetooth_RegisterDisconnect(ucx_instance_t *inst, uUEBTDC_t callback);
void ucx_bluetooth_RegisterBondStatus(ucx_instance_t *inst, uUEBTB_t callback);
void ucx_bluetooth_RegisterUserConfirmation(ucx_instance_t *inst, uUEBTUC_t callback);
void ucx_bluetooth_RegisterPasskeyEntry(ucx_instance_t *inst, uUEBTUPD_t callback);
void ucx_bluetooth_RegisterPasskeyRequest(ucx_instance_t *inst, uUEBTUPE_t callback);
void ucx_bluetooth_RegisterPhyUpdate(ucx_instance_t *inst, uUEBTPHYU_t callback);
void ucx_bluetooth_RegisterBackgroundDiscovery(ucx_instance_t *inst, uUEBTBGD_t callback);
/* ========== DIAGNOSTICS FUNCTIONS ========== */
int32_t ucx_diagnostics_Ping1(ucx_instance_t *inst, const char * destination);
int32_t ucx_diagnostics_Ping2(ucx_instance_t *inst, const char * destination, int32_t count);
int32_t ucx_diagnostics_PingStop(ucx_instance_t *inst);
int32_t ucx_diagnostics_Iperf2(ucx_instance_t *inst, uDiagIperfAction_t iperf_action, uDiagProtocolType_t protocol_type);
int32_t ucx_diagnostics_Iperf5(ucx_instance_t *inst, uDiagIperfAction_t iperf_action, uDiagProtocolType_t protocol_type, uDiagRole_t role, int32_t port, int32_t report_interval);
int32_t ucx_diagnostics_Iperf7(ucx_instance_t *inst, uDiagIperfAction_t iperf_action, uDiagProtocolType_t protocol_type, uDiagRole_t role, int32_t port, int32_t report_interval, int32_t time_boundary, uSockIpAddress_t * ip_addr);
int32_t ucx_diagnostics_Iperf8(ucx_instance_t *inst, uDiagIperfAction_t iperf_action, uDiagProtocolType_t protocol_type, uDiagRole_t role, int32_t port, int32_t report_interval, int32_t time_boundary, uSockIpAddress_t * ip_addr, int32_t length);
int32_t ucx_diagnostics_Iperf9(ucx_instance_t *inst, uDiagIperfAction_t iperf_action, uDiagProtocolType_t protocol_type, uDiagRole_t role, int32_t port, int32_t report_interval, int32_t time_boundary, uSockIpAddress_t * ip_addr, int32_t length, int32_t bandwidth);
int32_t ucx_diagnostics_Iperf10(ucx_instance_t *inst, uDiagIperfAction_t iperf_action, uDiagProtocolType_t protocol_type, uDiagRole_t role, int32_t port, int32_t report_interval, int32_t time_boundary, uSockIpAddress_t * ip_addr, int32_t length, int32_t bandwidth, uDiagBidirectional_t bidirectional);
void ucx_diagnostics_RegisterPingComplete(ucx_instance_t *inst, uUEDGPC_t callback);
void ucx_diagnostics_RegisterPingResponse(ucx_instance_t *inst, uUEDGP_t callback);
void ucx_diagnostics_RegisterIperfOutput(ucx_instance_t *inst, uUEDGI_t callback);
/* ========== GATT_CLIENT FUNCTIONS ========== */
void ucx_gatt_client_DiscoverPrimaryServicesBegin(ucx_instance_t *inst, int32_t conn_handle);
bool ucx_gatt_client_DiscoverPrimaryServicesGetNext(ucx_instance_t *inst, uCxGattClientDiscoverPrimaryServices_t * pGattClientDiscoverPrimaryServicesRsp);
void ucx_gatt_client_DiscoverPrimaryServicesByUuidBegin(ucx_instance_t *inst, int32_t conn_handle, const uint8_t * uuid, int32_t uuid_len);
bool ucx_gatt_client_DiscoverPrimaryServicesByUuidGetNext(ucx_instance_t *inst, uCxGattClientDiscoverPrimaryServicesByUuid_t * pGattClientDiscoverPrimaryServicesByUuidRsp);
void ucx_gatt_client_DiscoverServiceCharsBegin(ucx_instance_t *inst, int32_t conn_handle, int32_t start, int32_t end);
bool ucx_gatt_client_DiscoverServiceCharsGetNext(ucx_instance_t *inst, uCxGattClientDiscoverServiceChars_t * pGattClientDiscoverServiceCharsRsp);
void ucx_gatt_client_DiscoverCharDescriptorsBegin(ucx_instance_t *inst, int32_t conn_handle, int32_t value_handle, int32_t char_end_handle);
bool ucx_gatt_client_DiscoverCharDescriptorsGetNext(ucx_instance_t *inst, uCxGattClientDiscoverCharDescriptors_t * pGattClientDiscoverCharDescriptorsRsp);
bool ucx_gatt_client_ReadBegin(ucx_instance_t *inst, int32_t conn_handle, int32_t value_handle, uByteArray_t * pHexData);
bool ucx_gatt_client_ReadByUuidBegin(ucx_instance_t *inst, int32_t conn_handle, int32_t start, int32_t end, const uint8_t * uuid, int32_t uuid_len, uCxGattClientReadByUuid_t * pGattClientReadByUuidRsp);
int32_t ucx_gatt_client_Write(ucx_instance_t *inst, int32_t conn_handle, int32_t value_handle, const uint8_t * hex_data, int32_t hex_data_len);
int32_t ucx_gatt_client_ConfigWrite(ucx_instance_t *inst, int32_t conn_handle, int32_t desc_handle, uGattClientConfig_t config);
int32_t ucx_gatt_client_WriteNoRsp(ucx_instance_t *inst, int32_t conn_handle, int32_t value_handle, const uint8_t * hex_data, int32_t hex_data_len);
int32_t ucx_gatt_client_WriteLong(ucx_instance_t *inst, int32_t conn_handle, int32_t value_handle, const uint8_t * hex_data, int32_t hex_data_len, uGattClientReliable_t reliable, uGattClientFlag_t flag, int32_t offset);
void ucx_gatt_client_RegisterNotification(ucx_instance_t *inst, uUEBTGCN_t callback);
void ucx_gatt_client_RegisterIndication(ucx_instance_t *inst, uUEBTGCI_t callback);
/* ========== GATT_SERVER FUNCTIONS ========== */
int32_t ucx_gatt_server_ServiceDefine(ucx_instance_t *inst, const uint8_t * uuid, int32_t uuid_len, int32_t * pSerHandle);
int32_t ucx_gatt_server_CharDefine5(ucx_instance_t *inst, const uint8_t * uuid, int32_t uuid_len, const uint8_t * properties, int32_t properties_len, uGattServerReadSecurity_t read_security, uGattServerWriteSecurity_t write_security, const uint8_t * value, int32_t value_len, uCxGattServerCharDefine_t * pGattServerCharDefineRsp);
int32_t ucx_gatt_server_CharDefine6(ucx_instance_t *inst, const uint8_t * uuid, int32_t uuid_len, const uint8_t * properties, int32_t properties_len, uGattServerReadSecurity_t read_security, uGattServerWriteSecurity_t write_security, const uint8_t * value, int32_t value_len, int32_t max_length, uCxGattServerCharDefine_t * pGattServerCharDefineRsp);
int32_t ucx_gatt_server_HostCharDefine(ucx_instance_t *inst, const uint8_t * uuid, int32_t uuid_len, const uint8_t * properties, int32_t properties_len, uGattServerReadSecurity_t read_security, uGattServerWriteSecurity_t write_security, uCxGattServerHostCharDefine_t * pGattServerHostCharDefineRsp);
int32_t ucx_gatt_server_DescriptorDefine4(ucx_instance_t *inst, const uint8_t * uuid, int32_t uuid_len, uGattServerReadSecurity_t read_security, uGattServerWriteSecurity_t write_security, const uint8_t * value, int32_t value_len, int32_t * pDescHandle);