ucx-avalonia-app/Services/UcxNativeGenerated.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetPairingMode(IntPtr instance, out int pPairingMode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_UserConfirmation(IntPtr instance, out int bd_addr, int confirm);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_UserPasskeyEntry2(IntPtr instance, out int bd_addr, int confirm);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_UserPasskeyEntry3(IntPtr instance, out int bd_addr, int confirm, int passkey);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_Bond(IntPtr instance, out int bd_addr);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_Unbond(IntPtr instance, out int bd_addr);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_UnbondAll(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_ListBondedDevicesBegin(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_bluetooth_ListBondedDevicesGetNext(IntPtr instance, out int pBdAddr);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetDeviceInfoServiceChar(IntPtr instance, int char_id, [MarshalAs(UnmanagedType.LPStr)] string char_value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_bluetooth_GetDeviceInfoServiceCharBegin(IntPtr instance, int char_id, [MarshalAs(UnmanagedType.LPStr)] string ppCharValue);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_ListDeviceInfoServiceCharsBegin(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_bluetooth_ListDeviceInfoServiceCharsGetNext(IntPtr instance, out int pBtListDeviceInfoServiceCharsRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_RequestPhy(IntPtr instance, int conn_handle, int tx_phy, int rx_phy);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetPhy(IntPtr instance, int conn_handle, out int pBtGetPhyRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_RegisterConnect(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_RegisterDisconnect(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_RegisterBondStatus(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_RegisterUserConfirmation(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_RegisterPasskeyEntry(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_RegisterPasskeyRequest(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_RegisterPhyUpdate(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_RegisterBackgroundDiscovery(IntPtr instance, int callback);

        #endregion

        #region DIAGNOSTICS Functions

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_diagnostics_Ping1(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string destination);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_diagnostics_Ping2(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string destination, int count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_diagnostics_PingStop(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_diagnostics_Iperf2(IntPtr instance, int iperf_action, int protocol_type);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_diagnostics_Iperf5(IntPtr instance, int iperf_action, int protocol_type, int role, int port, int report_interval);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_diagnostics_Iperf7(IntPtr instance, int iperf_action, int protocol_type, int role, int port, int report_interval, int time_boundary, out int ip_addr);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_diagnostics_Iperf8(IntPtr instance, int iperf_action, int protocol_type, int role, int port, int report_interval, int time_boundary, out int ip_addr, int length);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_diagnostics_Iperf9(IntPtr instance, int iperf_action, int protocol_type, int role, int port, int report_interval, int time_boundary, out int ip_addr, int length, int bandwidth);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_diagnostics_Iperf10(IntPtr instance, int iperf_action, int protocol_type, int role, int port, int report_interval, int time_boundary, out int ip_addr, int length, int bandwidth, int bidirectional);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_diagnostics_RegisterPingComplete(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_diagnostics_RegisterPingResponse(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_diagnostics_RegisterIperfOutput(IntPtr instance, int callback);

        #endregion

        #region GATT_CLIENT Functions

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_gatt_client_DiscoverPrimaryServicesBegin(IntPtr instance, int conn_handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_gatt_client_DiscoverPrimaryServicesGetNext(IntPtr instance, out int pGattClientDiscoverPrimaryServicesRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_gatt_client_DiscoverPrimaryServicesByUuidBegin(IntPtr instance, int conn_handle, IntPtr uuid, int uuid_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_gatt_client_DiscoverPrimaryServicesByUuidGetNext(IntPtr instance, out int pGattClientDiscoverPrimaryServicesByUuidRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_gatt_client_DiscoverServiceCharsBegin(IntPtr instance, int conn_handle, int start, int end);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_gatt_client_DiscoverServiceCharsGetNext(IntPtr instance, out int pGattClientDiscoverServiceCharsRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_gatt_client_DiscoverCharDescriptorsBegin(IntPtr instance, int conn_handle, int value_handle, int char_end_handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_gatt_client_DiscoverCharDescriptorsGetNext(IntPtr instance, out int pGattClientDiscoverCharDescriptorsRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_gatt_client_ReadBegin(IntPtr instance, int conn_handle, int value_handle, out int pHexData);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_gatt_client_ReadByUuidBegin(IntPtr instance, int conn_handle, int start, int end, IntPtr uuid, int uuid_len, out int pGattClientReadByUuidRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_client_Write(IntPtr instance, int conn_handle, int value_handle, IntPtr hex_data, int hex_data_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_client_ConfigWrite(IntPtr instance, int conn_handle, int desc_handle, int config);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_client_WriteNoRsp(IntPtr instance, int conn_handle, int value_handle, IntPtr hex_data, int hex_data_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_client_WriteLong(IntPtr instance, int conn_handle, int value_handle, IntPtr hex_data, int hex_data_len, int reliable, int flag, int offset);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_gatt_client_RegisterNotification(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_gatt_client_RegisterIndication(IntPtr instance, int callback);

        #endregion

        #region GATT_SERVER Functions

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_server_ServiceDefine(IntPtr instance, IntPtr uuid, int uuid_len, out int pSerHandle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_server_CharDefine5(IntPtr instance, IntPtr uuid, int uuid_len, IntPtr properties, int properties_len, int read_security, int write_security, IntPtr value, int value_len, out int pGattServerCharDefineRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_server_CharDefine6(IntPtr instance, IntPtr uuid, int uuid_len, IntPtr properties, int properties_len, int read_security, int write_security, IntPtr value, int value_len, int max_length, out int pGattServerCharDefineRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_server_HostCharDefine(IntPtr instance, IntPtr uuid, int uuid_len, IntPtr properties, int properties_len, int read_security, int write_security, out int pGattServerHostCharDefineRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_gatt_server_DescriptorDefine4(IntPtr instance, IntPtr uuid, int uuid_len, int read_security, int write_security, IntPtr value, int value_len, out int pDescHandle);
